src/tests/snapshots/funky__tests__wat__add64_sat_u.snap
---
source: src/tests/wat.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module_instance: ModuleInstance {
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I64,
                    },
                ],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_LOCAL_GET(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 3,
                        instruction: OP_I64_ADD,
                    },
                    InstructionWrapper {
                        instruction_id: 4,
                        instruction: OP_LOCAL_GET(
                            2,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 5,
                        instruction: OP_I64_EXTEND_I32_U,
                    },
                    InstructionWrapper {
                        instruction_id: 6,
                        instruction: OP_I64_ADD,
                    },
                    InstructionWrapper {
                        instruction_id: 7,
                        instruction: OP_LOCAL_SET(
                            3,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 8,
                        instruction: OP_LOCAL_GET(
                            3,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 9,
                        instruction: OP_LOCAL_GET(
                            3,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 10,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 11,
                        instruction: OP_I64_LT_U,
                    },
                    InstructionWrapper {
                        instruction_id: 12,
                        instruction: OP_RETURN,
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 15,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 16,
                        instruction: OP_LOCAL_GET(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 17,
                        instruction: OP_I32_CONST(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 18,
                        instruction: OP_CALL(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 19,
                        instruction: OP_IF(
                            FuncTy(
                                2,
                            ),
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 13,
                                        instruction: OP_DROP,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 14,
                                        instruction: OP_I64_CONST(
                                            -1,
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I64,
                    I64,
                    I32,
                ],
                return_types: [
                    I64,
                    I32,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                    I64,
                ],
                return_types: [
                    I64,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                ],
                return_types: [
                    I64,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
            FuncAddr(
                1,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "add64_u_with_carry",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "add64_u_saturated",
                value: Function {
                    ty: 1,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                        I64,
                        I32,
                    ],
                    return_types: [
                        I64,
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I64,
                        },
                    ],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_LOCAL_GET(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 3,
                            instruction: OP_I64_ADD,
                        },
                        InstructionWrapper {
                            instruction_id: 4,
                            instruction: OP_LOCAL_GET(
                                2,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 5,
                            instruction: OP_I64_EXTEND_I32_U,
                        },
                        InstructionWrapper {
                            instruction_id: 6,
                            instruction: OP_I64_ADD,
                        },
                        InstructionWrapper {
                            instruction_id: 7,
                            instruction: OP_LOCAL_SET(
                                3,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 8,
                            instruction: OP_LOCAL_GET(
                                3,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 9,
                            instruction: OP_LOCAL_GET(
                                3,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 10,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 11,
                            instruction: OP_I64_LT_U,
                        },
                        InstructionWrapper {
                            instruction_id: 12,
                            instruction: OP_RETURN,
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                        I64,
                    ],
                    return_types: [
                        I64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 15,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 16,
                            instruction: OP_LOCAL_GET(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 17,
                            instruction: OP_I32_CONST(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 18,
                            instruction: OP_CALL(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 19,
                            instruction: OP_IF(
                                FuncTy(
                                    2,
                                ),
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 13,
                                            instruction: OP_DROP,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 14,
                                            instruction: OP_I64_CONST(
                                                -1,
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [
            Value(
                I64(
                    -1,
                ),
            ),
        ],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        14,
    ),
}
